clang/test/BSC/Negative/InitAnalysis/init-ensure-init-redecl.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// Test ensure_init on redeclarations.
// Rule: same-safety redeclarations must match ensure_init exactly.
// Heterogeneous (_Safe vs non-safe) redeclarations are separate overloads.

// --- Same-safety: both have ensure_init — OK ---

_Safe void foo(int *__attribute__((ensure_init)) _Borrow out);
_Safe void foo(int *__attribute__((ensure_init)) _Borrow out) {
    *out = 1;
}

// Callee contract enforced: empty body → error.
_Safe void bar(int *__attribute__((ensure_init)) _Borrow out);
_Safe void bar(int *__attribute__((ensure_init)) _Borrow out) {
} // expected-error {{'*out' not initialized at return in __attribute__((ensure_init)) function}}

// Caller side works.
_Safe void test_caller(void) {
    int x;
    foo(&_Mut x);
    int y = x;
}

// Chain call with consistent ensure_init.
_Safe void init_int(int *__attribute__((ensure_init)) _Borrow out);
_Safe void init_int(int *__attribute__((ensure_init)) _Borrow out) {
    *out = 99;
}

_Safe void init_x(int *__attribute__((ensure_init)) _Borrow out);
_Safe void init_x(int *__attribute__((ensure_init)) _Borrow out) {
    init_int(out);
}

_Safe int use_val(int v);

_Safe int test_chain(void) {
    int x;
    init_x(&_Mut x);
    int y = use_val(x);
    return y;
}

// --- Heterogeneous: ensure_init differences allowed ---

struct stat {
    unsigned int st_dev;
    unsigned int st_ino;
    unsigned int st_mode;
    unsigned int st_nlink;
    unsigned int st_size;
};

#define S_IFDIR 0040000

int lstat(const char *path, struct stat *__attribute__((ensure_init)) buf);

_Safe int is_directory(const char *_Borrow path) {
    struct stat dirStat;
    int ret = _Unsafe(lstat((const char *)path, &dirStat));
    if (ret == -1 || !(S_IFDIR & dirStat.st_mode))
        return 0;
    return 1;
}

// Unsafe with ensure_init, _Safe without — allowed (different safety).
void hetero_ei(int *__attribute__((ensure_init)) out);
_Safe void hetero_ei(int *_Borrow out) {
    *out = 1;
}

// _Safe with ensure_init, unsafe without — allowed (different safety).
_Safe void hetero_ei2(int *__attribute__((ensure_init)) _Borrow out);
void hetero_ei2(int *out) {
    *out = 1;
}

// --- Same-safety mismatch: ERROR ---

// _Safe/_Safe: first has, second doesn't.
_Safe void mismatch_safe(int *__attribute__((ensure_init)) _Borrow out);
_Safe void mismatch_safe(int *_Borrow out) { // expected-error {{function 'mismatch_safe' has incompatible _Safe and _Unsafe declarations}}
    *out = 1;
}

// _Safe/_Safe: first doesn't, second adds.
_Safe void mismatch_safe_add(int *_Borrow out);
_Safe void mismatch_safe_add(int *__attribute__((ensure_init)) _Borrow out) { // expected-error {{function 'mismatch_safe_add' has incompatible _Safe and _Unsafe declarations}}
    *out = 1;
}

// default/default: first has, second doesn't.
void mismatch_unsafe(int *__attribute__((ensure_init)) out);
void mismatch_unsafe(int *out) { // expected-error {{function 'mismatch_unsafe' has incompatible _Safe and _Unsafe declarations}}
    *out = 1;
}

// default/default: first doesn't, second adds.
void mismatch_add(int *out);
void mismatch_add(int *__attribute__((ensure_init)) out) { // expected-error {{function 'mismatch_add' has incompatible _Safe and _Unsafe declarations}}
    *out = 1;
}
